--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -4,14 +4,24 @@ artifacts_root: artifacts
 data_ingestion:
   root_dir: artifacts/data_ingestion
   source_URL: https://www.kaggle.com/datasets/brijbhushannanda1979/bigmart-sales-data/download?datasetVersionNumber=1
-  local_data_file: artifacts/data_ingestion/data.zip
-  unzip_dir: artifacts/data_ingestion
+  local_data_file: artifacts/data_ingestion/raw_data.zip
+  unzip_dir: artifacts/data_ingestion/raw
+  ingested_train_dir: artifacts/data_ingestion/ingested_train_dir
+  ingested_test_dir: artifacts/data_ingestion/ingested_test_dir
+  train_file_name: Train.csv
+  test_file_name: Test.csv
 
 
 
 data_validation_config:
   schema_dir: config
   schema_file_name: schema.yaml
+  validated_dir: artifacts/data_validation
+  validated_train_dir: artifacts/data_validation/validated_train
+  validated_test_dir: artifacts/data_validation/validated_test
+
+  
+
   
 
 data_transformation_config:
