dvc with mlflow

--- a/artifacts/model_evaluation/model_evaluation.yaml
+++ b/artifacts/model_evaluation/model_evaluation.yaml
@@ -11,3 +11,15 @@ history:
     model_path: artifacts\trained_model\model.pkl
   2022-10-01 01:20:17.972014:
     model_path: artifacts\trained_model\model.pkl
+  2022-10-01 18:56:21.385575:
+    model_path: artifacts\trained_model\model.pkl
+  2022-10-01 18:59:08.914431:
+    model_path: artifacts\trained_model\model.pkl
+  2022-10-01 19:01:18.434622:
+    model_path: artifacts\trained_model\model.pkl
+  2022-10-01 19:03:26.958852:
+    model_path: artifacts\trained_model\model.pkl
+  2022-10-01 19:07:45.715224:
+    model_path: artifacts\trained_model\model.pkl
+  2022-10-01 19:08:07.355675:
+    model_path: artifacts\trained_model\model.pkl
