--- a/prediction_service/requirements.txt
+++ b/prediction_service/requirements.txt
@@ -1,4 +1,17 @@
-streamlit
+sklearn
+dvc
+pandas
+notebook
+numpy
+matplotlib
+seaborn
+python-box==6.0.2
 pyYAML
+tqdm
+ensure==1.0.2
+joblib
+plotly
+streamlit
+mlflow
 storesSalePrediction==0.0.0
 
